test/typechecker/pass/pub_mod_members.fu
mod Foo {
    pub type T = i32;
}
fun f(x: Foo.T) -> i32 = x;
