test/typechecker/fail/rebind_where_clause.fu
sig Foo { type T = i32; }
type Bar = Foo where T = i64;
